--- a/Allfiles/dotnet/Mod07/Labfiles/Starter/Contoso.Events/Contoso.Events.DataGeneration/Contoso.Events.Data.Generation.csproj
+++ b/Allfiles/dotnet/Mod07/Labfiles/Starter/Contoso.Events/Contoso.Events.DataGeneration/Contoso.Events.Data.Generation.csproj
@@ -11,10 +11,14 @@
     <AssemblyName>Contoso.Events.Data.Generation</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -99,7 +103,9 @@
     <Compile Include="TechinicalConferenceRegistration.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
